table data row and col can custom

--- a/packages/dooringx-example/src/global.less
+++ b/packages/dooringx-example/src/global.less
@@ -1,3 +1,19 @@
 .ant-menu-title-content {
 	margin: 0 !important;
 }
+
+table.mj-table {
+	text-align: center;
+	border-left: 1px solid;
+	border-bottom: 1px solid;
+	tr {
+		th,
+		td {
+			&:first-child {
+				
+			}
+			border-top: 1px solid;
+			border-right: 1px solid;
+		}
+	}
+}
