--- a/packages/dooringx-example/src/global.less
+++ b/packages/dooringx-example/src/global.less
@@ -1,19 +1,33 @@
 .ant-menu-title-content {
 	margin: 0 !important;
 }
-
+.ant-col.mj-line-height {
+	line-height: 30px;
+}
 table.mj-table {
+	--cell-padding: 5px 5px;
 	text-align: center;
 	border-left: 1px solid;
 	border-bottom: 1px solid;
-	tr {
-		th,
-		td {
-			&:first-child {
-				
+	thead {
+		tr {
+			th {
+				position: relative;
 			}
-			border-top: 1px solid;
-			border-right: 1px solid;
+		}
+	}
+	tbody {
+		tr {
+			td {
+				&:first-child {
+					
+				}
+				border-top: 1px solid;
+				border-right: 1px solid;
+				div.mj-cell {
+                    padding: var(--cell-padding);
+                }
+			}
 		}
 	}
 }
