--- a/packages/dooringx-example/src/global.less
+++ b/packages/dooringx-example/src/global.less
@@ -25,7 +25,14 @@ table.mj-table {
 				border-top: 1px solid;
 				border-right: 1px solid;
 				div.mj-cell {
-                    padding: var(--cell-padding);
+					padding: var(--cell-padding);
+					height: 100%;
+					textarea {
+						overflow: visible;
+						width: 100%;
+						height: 100%;
+						border: unset;
+					}
                 }
 			}
 		}
