--- a/packages/dooringx-example/src/global.less
+++ b/packages/dooringx-example/src/global.less
@@ -32,6 +32,7 @@ table.mj-table {
 						width: 100%;
 						height: 100%;
 						border: unset;
+						resize: none;
 					}
                 }
 			}
